--- a/templates/index.html
+++ b/templates/index.html
@@ -26,8 +26,8 @@
             </form>
             <!-- Navbar-->
             <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-users"></i> Group 12</a>
+                <li class="nav-item">
+                    <a class="nav-link" id="navbarDropdown"><i class="fas fa-users"></i> Group 12</a>
                 </li>
             </ul>
         </nav>
