--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
             <!-- Navbar-->
             <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
                 <li class="nav-item">
-                    <a class="nav-link" id="navbarDropdown"><i class="fas fa-users"></i> Group 12</a>
+                    <a class="nav-link" id="navbarGroup" href="{{ url_for('group') }}"><i class="fas fa-users"></i> Group 12</a>
                 </li>
             </ul>
         </nav>
@@ -89,7 +89,7 @@
                                 <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
                                 Charts
                             </a>
-                            <a class="nav-link" href="tables.html">
+                            <a class="nav-link" href="group.html">
                                 <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                                 Tables
                             </a>
