--- a/templates/index.html
+++ b/templates/index.html
@@ -6,13 +6,12 @@
         <h1>{% block title %}Welcome Home!{% endblock %}</h1>
     {% endblock %}
 </head>
+{% block content %}
 <body class="sb-nav-fixed">
-{% extends 'nav.html' %}
 {% block nav %}
 {% endblock %}
 <div id="layoutSidenav">
     <div id="layoutSidenav_nav">
-        {% extends 'sidenav.html' %}
         {% block sidenav %}
         {% endblock %}
     </div>
@@ -153,13 +152,6 @@
         </footer>
     </div>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        crossorigin="anonymous"></script>
-<script src="js/scripts.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
-<script src="/static/assets/demo/chart-area-demo.js"></script>
-<script src="/static/assets/demo/chart-bar-demo.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest" crossorigin="anonymous"></script>
-<script src="js/datatables-simple-demo.js"></script>
 </body>
+{% endblock %}
 </html>
