--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
 {% extends 'base.html' %}
-<head>
-    {% block head %}
-        <h1>{% block title %}Welcome Home!{% endblock %}</h1>
-    {% endblock %}
-</head>
+{% block head %}
+    <h1>{% block title %}Dashboard{% endblock %}</h1>
+{% endblock %}
 {% block content %}
 <body class="sb-nav-fixed">
 {% block nav %}
