--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 <!doctype html>
-{% block head %}
+<html>
 <head>
+{% block head %}
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
@@ -130,3 +131,4 @@
         <script src="js/datatables-simple-demo.js"></script>
     {% endblock %}
 {% endblock %}
+</html>
