--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block head %}
+    {{ super() }}
     <h1>{% block title %}Dashboard{% endblock %}</h1>
 {% endblock %}
 {% block content %}
