--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+{% block nav %}
 <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
     <!-- Navbar Brand-->
     <a class="navbar-brand ps-3" href="index.html">3204 Coursework 2</a>
