--- a/templates/base.html
+++ b/templates/base.html
@@ -117,6 +117,8 @@
         </div>
     </nav>
 {% endblock %}
+{% block content %}
+{% endblock %}
 {% block footer %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
             crossorigin="anonymous"></script>
