--- a/templates/base.html
+++ b/templates/base.html
@@ -110,8 +110,8 @@
                 </div>
             </div>
             <div class="sb-sidenav-footer">
-                <div class="small">Logged in as:</div>
-                Start Bootstrap
+                <div class="small">This is created and managed by:</div>
+                3204 Team 12
             </div>
         </nav>
     </div>
