--- a/templates/group.html
+++ b/templates/group.html
@@ -1,4 +1,4 @@
-{% extends base.html %}
+{% extends 'base.html' %}
 <title>Our Group - 3204 Group 12</title>
 {% block content %}
     <div class="container-fluid px-4">
