--- a/templates/group.html
+++ b/templates/group.html
@@ -2,7 +2,7 @@
 <title>Our Group - 3204 Group 12</title>
 {% block content %}
     <div class="container-fluid px-4">
-        <h1 class="mt-4">Tables</h1>
+        <h1 class="mt-4">Our Group</h1>
         <ol class="breadcrumb mb-4">
             <li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
             <li class="breadcrumb-item active">Tables</li>
