--- a/templates/group.html
+++ b/templates/group.html
@@ -5,20 +5,17 @@
         <h1 class="mt-4">Our Group</h1>
         <ol class="breadcrumb mb-4">
             <li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
-            <li class="breadcrumb-item active">Tables</li>
+            <li class="breadcrumb-item active">Our Group</li>
         </ol>
         <div class="card mb-4">
             <div class="card-body">
-                DataTables is a third party plugin that is used to generate the demo table below. For more information
-                about DataTables, please visit the
-                <a target="_blank" href="https://datatables.net/">official DataTables documentation</a>
-                .
+                We are Group 12. Group and Team probably means the same, so we use these terms interchangeably in our project.
             </div>
         </div>
         <div class="card mb-4">
             <div class="card-header">
                 <i class="fas fa-table me-1"></i>
-                DataTable Example
+                The Team
             </div>
             <div class="card-body">
                 <table id="datatablesSimple">
