--- a/templates/base.html
+++ b/templates/base.html
@@ -123,7 +123,7 @@
         <footer class="py-4 bg-light mt-auto">
             <div class="container-fluid px-4">
                 <div class="d-flex align-items-center justify-content-between small">
-                    <div class="text-muted">Copyright &copy; Your Website 2022</div>
+                    <div class="text-muted">Copyright 2022 &copy; 3204 Group 12. All Rights Reserved.</div>
                     <div>
                         <a href="#">Privacy Policy</a>
                         &middot;
