--- a/templates/group.html
+++ b/templates/group.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-<title>Our Group - 3204 Group 12</title>
+{% block title %}Our Group{% endblock %}
 {% block content %}
     <div class="container-fluid px-4">
         <h1 class="mt-4">Our Group</h1>
@@ -71,5 +71,3 @@
     <script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest" crossorigin="anonymous"></script>
     <script src="js/datatables-simple-demo.js"></script>
 {% endblock %}
-</body>
-</html>
