--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
                         <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
                         Charts
                     </a>
-                    <a class="nav-link" href="{{ url_for('groups') }}">
+                    <a class="nav-link" href="{{ url_for('group') }}">
                         <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                         Our Group
                     </a>
