--- a/templates/index.html
+++ b/templates/index.html
@@ -69,7 +69,7 @@
                         Bar Chart Example
                     </div>
                     <div class="card-body">
-                        <canvas id="myBarChart" width="100%" height="40"></canvas>
+                        <canvas id="chart" width="100%" height="40"></canvas>
                     </div>
                 </div>
             </div>
@@ -134,6 +134,10 @@
             crossorigin="anonymous"></script>
     <script src="/static/assets/demo/chart-area-demo.js"></script>
     <script src="/static/assets/charts/precision-bar.js"></script>
+    <script type='text/javascript'>
+        var graphs = {{graphJSON | safe}};
+        Plotly.plot('chart', graphs, {});
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest" crossorigin="anonymous"></script>
     <script src="js/datatables-simple-demo.js"></script>
 {% endblock %}
