--- a/templates/index.html
+++ b/templates/index.html
@@ -69,7 +69,7 @@
                         Bar Chart Example
                     </div>
                     <div class="card-body">
-                        <img src="/static/assets/img/precision_bar.png"
+                        <img src="/static/assets/img/precision_bar.png" alt="Precision Chart" />
                     </div>
                 </div>
             </div>
