--- a/templates/index.html
+++ b/templates/index.html
@@ -55,10 +55,32 @@
                 <div class="card mb-4">
                     <div class="card-header">
                         <i class="fas fa-chart-area me-1"></i>
-                        Area Chart Example
+                        KNN Chart
                     </div>
                     <div class="card-body">
-                        <canvas id="myAreaChart" width="100%" height="40"></canvas>
+                        <img src="/static/assets/img/Knn_heatmap.png" alt="KNN Heatmap" class="img-fluid" />
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-6">
+                <div class="card mb-4">
+                    <div class="card-header">
+                        <i class="fas fa-chart-area me-1"></i>
+                        Decision Tree Chart
+                    </div>
+                    <div class="card-body">
+                        <img src="/static/assets/img/DecisionTree_heatmap.png" alt="Decision Tree Heatmap" class="img-fluid" />
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-6">
+                <div class="card mb-4">
+                    <div class="card-header">
+                        <i class="fas fa-chart-area me-1"></i>
+                        Random Forest Chart
+                    </div>
+                    <div class="card-body">
+                        <img src="/static/assets/img/RandomForest_heatmap.png" alt="Random Forest Heatmap" class="img-fluid" />
                     </div>
                 </div>
             </div>
@@ -66,10 +88,21 @@
                 <div class="card mb-4">
                     <div class="card-header">
                         <i class="fas fa-chart-bar me-1"></i>
-                        Bar Chart Example
+                        Precision Bar Chart
                     </div>
                     <div class="card-body">
-                        <img src="/static/assets/img/precision_bar.png" alt="Precision Chart" />
+                        <img src="/static/assets/img/precision_bar.png" alt="Precision Chart" class="image-fliud" />
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-6">
+                <div class="card mb-4">
+                    <div class="card-header">
+                        <i class="fas fa-chart-bar me-1"></i>
+                        Accuracy Bar Chart
+                    </div>
+                    <div class="card-body">
+                        <img src="/static/assets/img/accuracy_bar.png" alt="Accuracy Chart" class="image-fliud" />
                     </div>
                 </div>
             </div>
