--- a/templates/index.html
+++ b/templates/index.html
@@ -91,7 +91,7 @@
                         Precision Bar Chart
                     </div>
                     <div class="card-body">
-                        <img src="/static/assets/img/precision_bar.png" alt="Precision Chart" class="image-fliud" />
+                        <img src="/static/assets/img/precision_bar.png" alt="Precision Chart" class="image-fliud" width="100%" height="50" />
                     </div>
                 </div>
             </div>
