--- a/templates/charts.html
+++ b/templates/charts.html
@@ -9,11 +9,18 @@
         </ol>
         <div class="card mb-4">
             <div class="card-body">
-                Chart.js is a third party plugin that is used to generate the charts in this template. The charts below
-                have been customized - for further customization options, please visit the official
-                <a target="_blank" href="https://www.chartjs.org/docs/latest/">Chart.js documentation</a>
-                .
+                In this page, you will see more details and information on the comparison betweeen the visualised findings that were generated.
             </div>
+        </div>
+        <div class="card mb-4">
+            <div class="card-header">
+                <i class="fas fa-chart-area me-1"></i>
+                Determine K value
+            </div>
+            <div class="card-body">
+                <p>{{ k_value }}</p>
+            </div>
+            <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
         </div>
         <div class="card mb-4">
             <div class="card-header">
