--- a/templates/charts.html
+++ b/templates/charts.html
@@ -25,12 +25,12 @@
         <div class="card mb-4">
             <div class="card-header">
                 <i class="fas fa-chart-area me-1"></i>
-                Area Chart Example
+                KNN Chart
             </div>
             <div class="card-body">
-                <canvas id="myAreaChart" width="100%" height="30"></canvas>
+                <img src="/static/assets/img/Knn_heatmap.png"
             </div>
-            <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
+            <div class="card-footer small text-muted">{{ knn_accuracy }}<br />{{ knn_precision }}</div>
         </div>
         <div class="row">
             <div class="col-lg-6">
