--- a/templates/charts.html
+++ b/templates/charts.html
@@ -9,7 +9,8 @@
         </ol>
         <div class="card mb-4">
             <div class="card-body">
-                In this page, you will see more details and information on the comparison betweeen the visualised findings that were generated.
+                In this page, you will see more details and information on the comparison betweeen the visualised
+                findings that were generated.
             </div>
         </div>
         <div class="card mb-4">
@@ -20,29 +21,20 @@
             <div class="card-body">
                 <p>{{ data['k_value'] }}</p>
             </div>
-            <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
-        </div>
-        <div class="card mb-4">
-            <div class="card-header">
-                <i class="fas fa-chart-area me-1"></i>
-                KNN Chart
-            </div>
-            <div class="card-body">
-                <img src="/static/assets/img/Knn_heatmap.png" alt="KNN Heatmap" class="img-fluid" width="100%" />
-            </div>
-            <div class="card-footer small text-muted">{{ data['knn_accuracy'] }}<br />{{ data['knn_precision'] }}</div>
+            <div class="card-footer small text-muted"></div>
         </div>
         <div class="row">
             <div class="col-lg-6">
                 <div class="card mb-4">
                     <div class="card-header">
                         <i class="fas fa-chart-bar me-1"></i>
-                        Bar Chart Example
+                        KNN Chart
                     </div>
                     <div class="card-body">
-                        <canvas id="myBarChart" width="100%" height="50"></canvas>
+                        <img src="/static/assets/img/Knn_heatmap.png" alt="KNN Heatmap" class="img-fluid" width="100%"/>
                     </div>
-                    <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
+                    <div class="card-footer small text-muted">{{ data['knn_accuracy'] }}<br/>{{ data['knn_precision'] }}
+                    </div>
                 </div>
             </div>
             <div class="col-lg-6">
@@ -55,6 +47,17 @@
                         <canvas id="myPieChart" width="100%" height="50"></canvas>
                     </div>
                     <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
+                </div>
+            </div>
+            <div class="card mb-4">
+                <div class="card-header">
+                    <i class="fas fa-chart-area me-1"></i>
+                    KNN Chart
+                </div>
+                <div class="card-body">
+                    <img src="/static/assets/img/Knn_heatmap.png" alt="KNN Heatmap" class="img-fluid" width="100%"/>
+                </div>
+                <div class="card-footer small text-muted">{{ data['knn_accuracy'] }}<br/>{{ data['knn_precision'] }}
                 </div>
             </div>
         </div>
