--- a/templates/charts.html
+++ b/templates/charts.html
@@ -53,12 +53,12 @@
                 <div class="card mb-4">
                     <div class="card-header">
                         <i class="fas fa-chart-pie me-1"></i>
-                        Random Tree Chart
+                        Random Forest Chart
                     </div>
                     <div class="card-body">
-                        <img src="/static/assets/img/RandomTree_heatmap.png" alt="Random Tree Heatmap" class="img-fluid" width="100%" />
+                        <img src="/static/assets/img/RandomForest_heatmap.png" alt="Random Tree Heatmap" class="img-fluid" width="100%" />
                     </div>
-                    <div class="card-footer small text-muted">{{ data['randomtree_accuracy'] }}<br />{{ data['randomtree_precision'] }}</div>
+                    <div class="card-footer small text-muted">{{ data['randomforest_accuracy'] }}<br />{{ data['randomforest_precision'] }}</div>
                 </div>
             </div>
             <div class="card mb-4">
