--- a/templates/charts.html
+++ b/templates/charts.html
@@ -61,15 +61,32 @@
                     <div class="card-footer small text-muted">{{ data['randomforest_accuracy'] }}<br />{{ data['randomforest_precision'] }}</div>
                 </div>
             </div>
-            <div class="card mb-4">
-                <div class="card-header">
-                    <i class="fas fa-chart-area me-1"></i>
-                    KNN Chart
+        </div>
+        <div class="row">
+            <div class="col-lg-6">
+                <div class="card mb-4">
+                    <div class="card-header">
+                        <i class="fas fa-chart-bar me-1"></i>
+                        Accuracy Chart
+                    </div>
+                    <div class="card-body">
+                        <img src="/static/assets/img/accuracy_bar.png" alt="Accuracy Bar Chart" class="img-fluid" width="100%" />
+                    </div>
+                    <div class="card-footer small text-muted">
+                        KNN Accuracy: {{ data['knn_accuracy'] }}<br/>Decision Tree Accuracy: {{ data['decisiontree_accuracy'] }}<br/>Random Forest Accuracy: {{ data['randomforest_accuracy'] }}
+                    </div>
                 </div>
-                <div class="card-body">
-                    <img src="/static/assets/img/Knn_heatmap.png" alt="KNN Heatmap" class="img-fluid" width="100%"/>
-                </div>
-                <div class="card-footer small text-muted">{{ data['knn_accuracy'] }}<br/>{{ data['knn_precision'] }}
+            </div>
+            <div class="col-lg-6">
+                <div class="card mb-4">
+                    <div class="card-header">
+                        <i class="fas fa-chart-pie me-1"></i>
+                        Precision Chart
+                    </div>
+                    <div class="card-body">
+                        <img src="/static/assets/img/DecisionTree_heatmap.png" alt="Decision Tree Heatmap" class="img-fluid" width="100%" />
+                    </div>
+                    <div class="card-footer small text-muted">{{ data['decisiontree_accuracy'] }}<br />{{ data['decisiontree_precision'] }}</div>
                 </div>
             </div>
         </div>
