--- a/templates/group.html
+++ b/templates/group.html
@@ -4,7 +4,7 @@
     <div class="container-fluid px-4">
         <h1 class="mt-4">Our Group</h1>
         <ol class="breadcrumb mb-4">
-            <li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
+            <li class="breadcrumb-item"><a href="{{ url_for('index') }}">Dashboard</a></li>
             <li class="breadcrumb-item active">Our Group</li>
         </ol>
         <div class="card mb-4">
