--- a/templates/charts.html
+++ b/templates/charts.html
@@ -27,7 +27,7 @@
             <div class="col-lg-6">
                 <div class="card mb-4">
                     <div class="card-header">
-                        <i class="fas fa-heat me-1"></i>
+                        <i class="fas fa-braille me-1"></i>
                         KNN Chart
                     </div>
                     <div class="card-body">
