--- a/templates/charts.html
+++ b/templates/charts.html
@@ -15,7 +15,7 @@
         </div>
         <div class="card mb-4">
             <div class="card-header">
-                <i class="fas fa-value-absolute me-1"></i>
+                <i class="fas fa-poll me-1"></i>
                 Determine K value
             </div>
             <div class="card-body">
@@ -40,7 +40,7 @@
             <div class="col-lg-6">
                 <div class="card mb-4">
                     <div class="card-header">
-                        <i class="fas fa-heat me-1"></i>
+                        <i class="fas fa-braille me-1"></i>
                         Decision Tree Chart
                     </div>
                     <div class="card-body">
@@ -52,7 +52,7 @@
             <div class="col-lg-6">
                 <div class="card mb-4">
                     <div class="card-header">
-                        <i class="fas fa-heat me-1"></i>
+                        <i class="fas fa-braille me-1"></i>
                         Random Forest Chart
                     </div>
                     <div class="card-body">
