--- a/templates/base.html
+++ b/templates/base.html
@@ -50,6 +50,10 @@
                         <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
                         Charts
                     </a>
+                    <a class="nav-link" href="{{ url_for('decision') }}">
+                        <div class="sb-nav-link-icon"><i class="fas fa-tree"></i></div>
+                        Charts > Decision Tree
+                    </a>
                     <a class="nav-link" href="{{ url_for('group') }}">
                         <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                         Our Group
