--- a/templates/charts.html
+++ b/templates/charts.html
@@ -40,8 +40,8 @@
             <div class="col-lg-6">
                 <div class="card mb-4">
                     <div class="card-header">
-                        <i class="fas fa-braille me-1"></i>
-                        Decision Tree Chart
+                        <a href="{{ url_for('decision') }}"><i class="fas fa-braille me-1"></i>
+                            Decision Tree Chart</a>
                     </div>
                     <div class="card-body">
                         <img src="/static/assets/img/DecisionTree_heatmap.png" alt="Decision Tree Heatmap" class="img-fluid" width="100%" />
