--- a/templates/decisiontree.html
+++ b/templates/decisiontree.html
@@ -24,29 +24,28 @@
             <div class="card-footer small text-muted"></div>
         </div>
         <div class="row">
-            <div class="col-lg-6">
-                <div class="card mb-4">
-                    <div class="card-header">
-                        <i class="fas fa-braille me-1"></i>
-                        Decision Tree
-                    </div>
-                    <div class="card-body">
-                        <img src="/static/assets/img/decision.png" alt="Decision Tree" class="img-fluid" width="100%" />
-                    </div>
-                    <div class="card-footer small text-muted"></div>
+            <div class="card mb-4">
+                <div class="card-header">
+                    <i class="fas fa-braille me-1"></i>
+                    Decision Tree
                 </div>
+                <div class="card-body">
+                    <img src="/static/assets/img/decision.png" alt="Decision Tree" class="img-fluid" width="100%"/>
+                </div>
+                <div class="card-footer small text-muted"></div>
             </div>
-            <div class="col-lg-6">
-                <div class="card mb-4">
-                    <div class="card-header">
-                        <i class="fas fa-braille me-1"></i>
-                        Decision Tree Chart
-                    </div>
-                    <div class="card-body">
-                        <img src="/static/assets/img/DecisionTree_heatmap.png" alt="Decision Tree Heatmap" class="img-fluid" width="100%" />
-                    </div>
-                    <div class="card-footer small text-muted"><strong>Decision Tree Accuracy:</strong><br/>{{ data['decisiontree_accuracy'] }}<br /><strong>Decision Tree Precision:</strong><br/>{{ data['decisiontree_precision'] }}</div>
+            <div class="card mb-4">
+                <div class="card-header">
+                    <i class="fas fa-braille me-1"></i>
+                    Decision Tree Chart
                 </div>
+                <div class="card-body">
+                    <img src="/static/assets/img/DecisionTree_heatmap.png" alt="Decision Tree Heatmap" class="img-fluid"
+                         width="100%"/>
+                </div>
+                <div class="card-footer small text-muted"><strong>Decision Tree
+                    Accuracy:</strong><br/>{{ data['decisiontree_accuracy'] }}<br/><strong>Decision Tree
+                    Precision:</strong><br/>{{ data['decisiontree_precision'] }}</div>
             </div>
         </div>
     </div>
