--- a/templates/group.html
+++ b/templates/group.html
@@ -14,7 +14,7 @@
         </div>
         <div class="card mb-4">
             <div class="card-header">
-                <i class="fas fa-table me-1"></i>
+                <i class="fas fa-users me-1"></i>
                 The Team
             </div>
             <div class="card-body">
