--- a/templates/group.html
+++ b/templates/group.html
@@ -1,6 +1,11 @@
 {% extends 'base.html' %}
 {% block title %}Our Group{% endblock %}
 {% block content %}
+    <div class="card mb-4">
+        <div class="card-body">
+            If the page is not showing correctly, please click the <i class="fas fa-redo-alt"></i> Reload button above.
+        </div>
+    </div>
     <div class="container-fluid px-4">
         <h1 class="mt-4">Our Group</h1>
         <ol class="breadcrumb mb-4">
@@ -9,7 +14,8 @@
         </ol>
         <div class="card mb-4">
             <div class="card-body">
-                We are Group 12. Group and Team probably means the same, so we use these terms interchangeably in our project.
+                We are Group 12. Group and Team probably means the same, so we use these terms interchangeably in our
+                project.
             </div>
         </div>
         <div class="card mb-4">
@@ -67,7 +73,5 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
             crossorigin="anonymous"></script>
-    <script src="js/scripts.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest" crossorigin="anonymous"></script>
-    <script src="js/datatables-simple-demo.js"></script>
 {% endblock %}
