--- a/templates/decisiontree.html
+++ b/templates/decisiontree.html
@@ -1,6 +1,11 @@
 {% extends 'base.html' %}
 {% block title %}Charts{% endblock %}
 {% block content %}
+    <div class="card mb-4">
+        <div class="card-body">
+            If the page is not showing correctly, please click the <i class="fas fa-redo-alt"></i> Reload button above.
+        </div>
+    </div>
     <div class="container-fluid px-4">
         <h1 class="mt-4">Charts</h1>
         <ol class="breadcrumb mb-4">
@@ -39,6 +44,5 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
             crossorigin="anonymous"></script>
-    <script src="js/scripts.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
 {% endblock %}
