--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,11 @@
     {{ super() }}
 {% endblock %}
 {% block content %}
+    <div class="card mb-4">
+        <div class="card-body">
+            If the page is not showing correctly, please click the <i class="fas fa-redo-alt"></i> Reload button above.
+        </div>
+    </div>
     <div class="container-fluid px-4">
         <h1 class="mt-4">Dashboard</h1>
         <ol class="breadcrumb mb-4">
@@ -16,7 +21,8 @@
             <div class="col-xl-12 col-md-12">
                 <div class="card bg-primary text-white mb-4">
                     <div class="card-body">Brief Introduction
-                        <p class="small text-white">This Dashboard shows our team's findings on the datasets after performing our analysis.</p>
+                        <p class="small text-white">This Dashboard shows our team's findings on the datasets after
+                            performing our analysis.</p>
                     </div>
                     <div class="card-footer d-flex align-items-center justify-content-between">
                         <a class="small text-white stretched-link" href="{{ url_for('charts') }}">View More</a>
@@ -33,7 +39,7 @@
                         KNN Chart
                     </div>
                     <div class="card-body">
-                        <img src="/static/assets/img/Knn_heatmap.png" alt="KNN Heatmap" class="img-fluid" />
+                        <img src="/static/assets/img/Knn_heatmap.png" alt="KNN Heatmap" class="img-fluid"/>
                     </div>
                 </div>
             </div>
@@ -44,7 +50,8 @@
                         Decision Tree Chart
                     </div>
                     <div class="card-body">
-                        <img src="/static/assets/img/DecisionTree_heatmap.png" alt="Decision Tree Heatmap" class="img-fluid" />
+                        <img src="/static/assets/img/DecisionTree_heatmap.png" alt="Decision Tree Heatmap"
+                             class="img-fluid"/>
                     </div>
                     <div class="card-footer small text-muted"><a href="{{ url_for('decision') }}">View More</a></div>
                 </div>
@@ -56,7 +63,8 @@
                         Random Forest Chart
                     </div>
                     <div class="card-body">
-                        <img src="/static/assets/img/RandomForest_heatmap.png" alt="Random Forest Heatmap" class="img-fluid" />
+                        <img src="/static/assets/img/RandomForest_heatmap.png" alt="Random Forest Heatmap"
+                             class="img-fluid"/>
                     </div>
                 </div>
             </div>
@@ -67,7 +75,8 @@
                         Precision Bar Chart
                     </div>
                     <div class="card-body">
-                        <img src="/static/assets/img/precision_bar.png" alt="Precision Chart" class="image-fliud" width="100%" />
+                        <img src="/static/assets/img/precision_bar.png" alt="Precision Chart" class="image-fliud"
+                             width="100%"/>
                     </div>
                 </div>
             </div>
@@ -78,7 +87,8 @@
                         Accuracy Bar Chart
                     </div>
                     <div class="card-body">
-                        <img src="/static/assets/img/accuracy_bar.png" alt="Accuracy Chart" class="image-fliud" width="100%" />
+                        <img src="/static/assets/img/accuracy_bar.png" alt="Accuracy Chart" class="image-fliud"
+                             width="100%"/>
                     </div>
                 </div>
             </div>
@@ -138,7 +148,6 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
             crossorigin="anonymous"></script>
-    <script src="js/scripts.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"
             crossorigin="anonymous"></script>
 {% endblock %}
